[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://UI/Skill UI.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Skill UI" type="TextureRect"]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Active" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
margin_left = -8.0
margin_top = -8.0
margin_right = 72.0
margin_bottom = 72.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Hover" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.258824 )
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2

[node name="Locked" type="ColorRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 0.568627 )
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
